loongarch:Support api2.0
Signed-off-by: libingxiong <libingxiong@loongson.cn>

--- a/scripts/Makefile.spl
+++ b/scripts/Makefile.spl
@@ -137,7 +137,11 @@ endif
 
 
 ifdef CONFIG_LOONGSON_DDR4
+ifneq ($(CONFIG_GCC_VERSION), $(firstword $(shell echo "140000 $(CONFIG_GCC_VERSION)" | tr ' ' '\n' | sort -n)))
+PLATFORM_LIBS += ../drivers/ram/loongson/libmem_config_new_api.a
+else
 PLATFORM_LIBS += ../drivers/ram/loongson/libmem_config.a
+endif
 endif
 
 u-boot-spl-init := $(head-y)
