--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: loongarch64-linux-gnu-gcc (GCC) 8.3.0
+# Compiler: loongarch64-unknown-linux-gnu-gcc (GCC) 14.1.0
 #
 CONFIG_HAVE_ARCH_IOREMAP=y
 CONFIG_LINKER_LIST_ALIGN=4
@@ -141,7 +141,7 @@ CONFIG_DEBUG_UART=y
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80300
+CONFIG_GCC_VERSION=140100
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_OPTIMIZE_FOR_SPEED is not set
@@ -1615,7 +1615,8 @@ CONFIG_USB_OHCI_GENERIC=y
 # CONFIG_USB_OHCI_DA8XX is not set
 # CONFIG_SYS_OHCI_SWAP_REG_ACCESS is not set
 # CONFIG_USB_UHCI_HCD is not set
-# CONFIG_USB_DWC2 is not set
+CONFIG_USB_DWC2=y
+CONFIG_USB_DWC2_BUFFER_SIZE=64
 # CONFIG_USB_R8A66597_HCD is not set
 # CONFIG_USB_ISP1760 is not set
 
