2k300 defconfig add fit support.
Signed-off-by: Chong Qiao <qiaochong@loongson.cn>

--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -186,14 +186,32 @@ CONFIG_SYS_UBOOT_START=0x900000000ec00000
 # CONFIG_ANDROID_BOOT_IMAGE is not set
 # CONFIG_TIMESTAMP is not set
 # CONFIG_BUTTON_CMD is not set
-# CONFIG_FIT is not set
+CONFIG_FIT=y
+CONFIG_FIT_EXTERNAL_OFFSET=0x0
+CONFIG_FIT_FULL_CHECK=y
+# CONFIG_FIT_SIGNATURE is not set
+# CONFIG_FIT_CIPHER is not set
+# CONFIG_FIT_VERBOSE is not set
+# CONFIG_FIT_BEST_MATCH is not set
+CONFIG_FIT_PRINT=y
+# CONFIG_SPL_FIT is not set
+# CONFIG_SPL_LOAD_FIT is not set
+# CONFIG_SPL_LOAD_FIT_FULL is not set
 CONFIG_PXE_UTILS=y
 CONFIG_BOOTSTD=y
 # CONFIG_SPL_BOOTSTD is not set
 # CONFIG_BOOTSTD_FULL is not set
 # CONFIG_BOOTSTD_DEFAULTS is not set
 CONFIG_BOOTSTD_BOOTCOMMAND=y
+CONFIG_BOOTMETH_GLOBAL=y
 CONFIG_BOOTMETH_EXTLINUX=y
+CONFIG_BOOTMETH_VBE=y
+# CONFIG_SPL_BOOTMETH_VBE is not set
+CONFIG_BOOTMETH_VBE_REQUEST=y
+# CONFIG_SPL_BOOTMETH_VBE_REQUEST is not set
+CONFIG_BOOTMETH_VBE_SIMPLE=y
+CONFIG_BOOTMETH_VBE_SIMPLE_OS=y
+# CONFIG_SPL_BOOTMETH_VBE_SIMPLE is not set
 # CONFIG_EXPO is not set
 # CONFIG_BOOTMETH_SCRIPT is not set
 CONFIG_LEGACY_IMAGE_FORMAT=y
@@ -750,7 +768,11 @@ CONFIG_OF_BOARD=y
 # CONFIG_OF_OMIT_DTB is not set
 CONFIG_DEVICE_TREE_INCLUDES=""
 CONFIG_OF_LIST="ls2k0300"
-# CONFIG_MULTI_DTB_FIT is not set
+# CONFIG_MULTI_DTB_FIT_LZO is not set
+# CONFIG_MULTI_DTB_FIT_GZIP is not set
+CONFIG_MULTI_DTB_FIT_NO_COMPRESSION=y
+# CONFIG_DTB_RESELECT is not set
+CONFIG_MULTI_DTB_FIT=y
 CONFIG_SPL_OF_LIST="ls2k0300"
 CONFIG_OF_TAG_MIGRATE=y
 CONFIG_OF_SPL_REMOVE_PROPS="interrupt-parent interrupts"
@@ -1844,7 +1866,7 @@ CONFIG_LIB_RAND=y
 # Hashing Support
 #
 # CONFIG_BLAKE2 is not set
-# CONFIG_SHA1 is not set
+CONFIG_SHA1=y
 # CONFIG_SHA256 is not set
 # CONFIG_SHA512 is not set
 # CONFIG_SHA384 is not set
@@ -1866,7 +1888,7 @@ CONFIG_CRC32=y
 # Compression Support
 #
 # CONFIG_LZ4 is not set
-# CONFIG_LZMA is not set
+CONFIG_LZMA=y
 # CONFIG_LZO is not set
 CONFIG_GZIP=y
 # CONFIG_ZLIB_UNCOMPRESS is not set
