--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -1176,7 +1176,8 @@ CONFIG_SYS_MMC_MAX_BLK_COUNT=65535
 CONFIG_MMC_HW_PARTITIONING=y
 # CONFIG_SUPPORT_EMMC_RPMB is not set
 # CONFIG_SUPPORT_EMMC_BOOT is not set
-# CONFIG_MMC_IO_VOLTAGE is not set
+CONFIG_MMC_IO_VOLTAGE=y
+CONFIG_MMC_UHS_SUPPORT=y
 # CONFIG_MMC_HS400_ES_SUPPORT is not set
 # CONFIG_MMC_HS400_SUPPORT is not set
 # CONFIG_MMC_HS200_SUPPORT is not set
@@ -1900,7 +1901,8 @@ CONFIG_ZLIB=y
 # CONFIG_SPL_LZMA is not set
 # CONFIG_VPL_LZMA is not set
 # CONFIG_SPL_LZO is not set
-# CONFIG_SPL_GZIP is not set
+CONFIG_SPL_GZIP=y
+CONFIG_SPL_ZLIB=y
 # CONFIG_SPL_ZSTD is not set
 # CONFIG_ERRNO_STR is not set
 # CONFIG_HEXDUMP is not set
