--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: loongarch64-unknown-linux-gnu-gcc (GCC) 14.1.0
+# Compiler: loongarch64-linux-gnu-gcc (LoongArch GNU toolchain rc1.3-1 (20240425)) 8.3.0
 #
 CONFIG_HAVE_ARCH_IOREMAP=y
 CONFIG_LINKER_LIST_ALIGN=4
@@ -141,7 +141,7 @@ CONFIG_DEBUG_UART=y
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=140100
+CONFIG_GCC_VERSION=80300
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_OPTIMIZE_FOR_SPEED is not set
@@ -671,7 +671,8 @@ CONFIG_CMD_BUTTON=y
 # CONFIG_CMD_CLS is not set
 CONFIG_CMD_LED=y
 # CONFIG_CMD_INI is not set
-# CONFIG_CMD_DATE is not set
+CONFIG_CMD_DATE=y
+CONFIG_CMD_RTC=y
 # CONFIG_CMD_TIME is not set
 # CONFIG_CMD_GETTIME is not set
 # CONFIG_CMD_PAUSE is not set
@@ -1456,20 +1457,35 @@ CONFIG_LOONGSON_DDR4=y
 #
 # Real Time Clock
 #
-# CONFIG_DM_RTC is not set
+CONFIG_DM_RTC=y
 # CONFIG_SPL_DM_RTC is not set
 # CONFIG_RTC_ENABLE_32KHZ_OUTPUT is not set
+# CONFIG_RTC_PCF2127 is not set
+# CONFIG_RTC_DS1307 is not set
 # CONFIG_RTC_DS1337 is not set
 # CONFIG_RTC_DS1338 is not set
-# CONFIG_RTC_DS1374 is not set
 # CONFIG_RTC_DS3231 is not set
+# CONFIG_RTC_DS3232 is not set
+# CONFIG_RTC_EMULATION is not set
+# CONFIG_RTC_GOLDFISH is not set
+# CONFIG_RTC_ISL1208 is not set
+# CONFIG_RTC_MAX313XX is not set
 # CONFIG_RTC_PCF8563 is not set
 # CONFIG_RTC_PT7C4338 is not set
+# CONFIG_RTC_RV3028 is not set
+# CONFIG_RTC_RV3029 is not set
+# CONFIG_RTC_RV8803 is not set
+# CONFIG_RTC_RX8010SJ is not set
+# CONFIG_RTC_RX8025 is not set
 # CONFIG_RTC_PL031 is not set
+# CONFIG_RTC_MV is not set
 # CONFIG_RTC_S35392A is not set
-# CONFIG_RTC_MC13XXX is not set
 # CONFIG_RTC_MC146818 is not set
 # CONFIG_RTC_M41T62 is not set
+# CONFIG_RTC_STM32 is not set
+CONFIG_RTC_LS=y
+# CONFIG_RTC_ABX80X is not set
+# CONFIG_RTC_HT1380 is not set
 # CONFIG_SCSI is not set
 CONFIG_SERIAL=y
 CONFIG_BAUDRATE=115200
@@ -1925,6 +1941,7 @@ CONFIG_SMBIOS=y
 # CONFIG_OPTEE_IMAGE is not set
 # CONFIG_BOOTM_OPTEE is not set
 # CONFIG_TEST_FDTDEC is not set
+CONFIG_LIB_DATE=y
 CONFIG_LIB_ELF=y
 CONFIG_LMB=y
 CONFIG_LMB_USE_MAX_REGIONS=y
