--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -571,7 +571,7 @@ CONFIG_CMD_DM=y
 # CONFIG_CMD_IDE is not set
 # CONFIG_CMD_IO is not set
 # CONFIG_CMD_IOTRACE is not set
-# CONFIG_CMD_I2C is not set
+CONFIG_CMD_I2C=y
 CONFIG_CMD_LOADB=y
 # CONFIG_CMD_LOADM is not set
 CONFIG_CMD_LOADS=y
@@ -1077,8 +1077,10 @@ CONFIG_SPL_DM_I2C=y
 # CONFIG_SYS_I2C_MXC is not set
 # CONFIG_SYS_I2C_NEXELL is not set
 # CONFIG_SYS_I2C_NPCM is not set
-CONFIG_SYS_I2C_OCORES=y
+# CONFIG_SYS_I2C_OCORES is not set
 # CONFIG_SYS_I2C_ROCKCHIP is not set
+CONFIG_SYS_I2C_LOONGSON=y
+# CONFIG_SPL_SYS_I2C_LOONGSON is not set
 # CONFIG_SYS_I2C_SOFT is not set
 # CONFIG_SYS_I2C_MV is not set
 # CONFIG_SYS_I2C_MVTWSI is not set
