--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -55,7 +55,7 @@ CONFIG_SPL_SERIAL=y
 # CONFIG_SPL_DRIVERS_MISC is not set
 CONFIG_SPL_STACK_R_ADDR=0x9000000002000000
 CONFIG_SPL_SYS_MALLOC_F=y
-CONFIG_SPL_SYS_MALLOC_F_LEN=0x10000
+CONFIG_SPL_SYS_MALLOC_F_LEN=0xf000
 CONFIG_ERR_PTR_OFFSET=0x0
 CONFIG_SPL_SIZE_LIMIT=0x40000
 CONFIG_SPL_SIZE_LIMIT_PROVIDE_STACK=0x100
@@ -1240,7 +1240,7 @@ CONFIG_SPI_FLASH_GIGADEVICE=y
 # CONFIG_SPI_FLASH_SST is not set
 CONFIG_SPI_FLASH_WINBOND=y
 # CONFIG_SPI_FLASH_XMC is not set
-# CONFIG_SPI_FLASH_XTX is not set
+CONFIG_SPI_FLASH_XTX=y
 # CONFIG_SPI_FLASH_ZBIT is not set
 CONFIG_SPI_FLASH_USE_4K_SECTORS=y
 # CONFIG_SPI_FLASH_DATAFLASH is not set
