99pi_plus: add gpt support

--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -4,7 +4,7 @@
 #
 
 #
-# Compiler: loongarch64-linux-gnu-gcc (LoongArch GNU toolchain rc1.3-1 (20240425)) 8.3.0
+# Compiler: loongarch64-unknown-linux-gnu-gcc (GCC) 13.2.0
 #
 CONFIG_HAVE_ARCH_IOREMAP=y
 CONFIG_LINKER_LIST_ALIGN=4
@@ -141,7 +141,7 @@ CONFIG_DEBUG_UART=y
 CONFIG_LOCALVERSION=""
 CONFIG_LOCALVERSION_AUTO=y
 CONFIG_CC_IS_GCC=y
-CONFIG_GCC_VERSION=80300
+CONFIG_GCC_VERSION=130200
 CONFIG_CLANG_VERSION=0
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 # CONFIG_CC_OPTIMIZE_FOR_SPEED is not set
@@ -361,6 +361,7 @@ CONFIG_HASH=y
 #
 # Update support
 #
+# CONFIG_UPDATE_TFTP is not set
 # CONFIG_ANDROID_AB is not set
 
 #
@@ -487,6 +488,7 @@ CONFIG_BOOTM_NETBSD=y
 # CONFIG_BOOTM_OPENRTOS is not set
 CONFIG_BOOTM_PLAN9=y
 CONFIG_BOOTM_RTEMS=y
+# CONFIG_CMD_VBE is not set
 CONFIG_BOOTM_VXWORKS=y
 CONFIG_CMD_BOOTMENU=y
 # CONFIG_CMD_ADTIMG is not set
@@ -750,10 +752,13 @@ CONFIG_ISO_PARTITION=y
 # CONFIG_SPL_ISO_PARTITION is not set
 # CONFIG_AMIGA_PARTITION is not set
 # CONFIG_SPL_AMIGA_PARTITION is not set
-# CONFIG_EFI_PARTITION is not set
+CONFIG_EFI_PARTITION=y
+CONFIG_EFI_PARTITION_ENTRIES_NUMBERS=128
+CONFIG_EFI_PARTITION_ENTRIES_OFF=0
 # CONFIG_SPL_EFI_PARTITION is not set
 CONFIG_PARTITION_UUIDS=y
 # CONFIG_SPL_PARTITION_UUIDS is not set
+CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SUPPORT_OF_CONTROL=y
 
 #
