99pi_plus: add extra utilities
part, dhcp

--- a/configs/loongson_2k0300_defconfig
+++ b/configs/loongson_2k0300_defconfig
@@ -592,7 +592,7 @@ CONFIG_CMD_BKOPS_ENABLE=y
 CONFIG_CMD_MTD=y
 # CONFIG_CMD_ONENAND is not set
 # CONFIG_CMD_OSD is not set
-# CONFIG_CMD_PART is not set
+CONFIG_CMD_PART=y
 # CONFIG_CMD_PCI is not set
 CONFIG_CMD_PINMUX=y
 CONFIG_CMD_POWEROFF=y
@@ -625,7 +625,7 @@ CONFIG_CMD_SETEXPR=y
 #
 CONFIG_CMD_NET=y
 CONFIG_CMD_BOOTP=y
-# CONFIG_CMD_DHCP is not set
+CONFIG_CMD_DHCP=y
 # CONFIG_BOOTP_MAY_FAIL is not set
 CONFIG_BOOTP_BOOTPATH=y
 # CONFIG_BOOTP_VENDOREX is not set
